fix: fixed overlapping index

--- a/src/sections/TakeOffBurden/styles.css
+++ b/src/sections/TakeOffBurden/styles.css
@@ -28,7 +28,7 @@
   border-radius: 30px;
   position: absolute;
   top: -50px;
-  z-index: 999;
+  z-index: 900;
 }
 
 .takeoffburden-Transparent-Card {
